# desktop

./: Cargo.toml  Makefile
.devcontainer/: Dockerfile
.github/workflows/: deploy.yml  rust.yml
cpm-cli/: Cargo.toml
cpm-cli/src/: main.rs
cpm-core/: Cargo.toml
cpm-core/src/: console.rs  emulator.rs  error.rs  lib.rs  package.rs  workspace.rs
cpm-core/src/bdos/: fcb.rs  mod.rs
cpm-core/src/fs/: drive_fs.rs  memory_drive.rs  mod.rs  overlay_drive.rs
cpm-core/tests/: package_integration.rs
win95-sim/: Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
win95-sim/.github/workflows/: deploy.yml
win95-sim/scripts/: cpm-pkg.ts
win95-sim/src/: capabilities.test.ts  capabilities.ts  components.test.ts  components.ts  main.ts  menu.ts  messaging.test.ts  messaging.ts  style.css
win95-sim/src/apps/: cgi-viewer.ts  cpm-ide.ts  cpm-terminal.ts  demo-apps.ts  index.ts  programs-menu.ts  theme-picker.ts  workspace-manager.ts
win95-sim/src/cpm/: emulator.ts  headless-terminal.ts  index.ts  loader.test.ts  loader.ts  memoryfs.ts  package-loader.test.ts  package-loader.ts  runner.test.ts  runner.ts  shared-memoryfs.ts  terminal.test.ts  terminal.ts  types.ts  workspace.test.ts  workspace.ts  z80.d.ts
win95-sim/src/desktop/: desktop.ts  index.ts  taskbar.ts  types.ts  window-manager.ts
win95-sim/src/themes/: classic.css  mobile.css  nirvana.css
