[package]
name = "cpm-core"
description = "CP/M 2.2 BDOS emulator core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Z80 emulation
z80emu = "0.10"

# Error handling
thiserror = "2"

# Package loading (ZIP)
zip = "2"

# Serialization for manifests
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
